Fix HTML formatting and update stylesheet link
Updated stylesheet link and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Morgan Photography</title>
-    <link rel="stylesheet" href="photographer_styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -77,3 +77,4 @@
     </section>
   </body>
 </html>
+
