--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alex Morgan Photography</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -76,6 +77,7 @@
     </section>
   </body>
 </html>
+
 
 
 
